--- a/html/home.html
+++ b/html/home.html
@@ -45,7 +45,7 @@
     </nav>
 
 <!--  Header  -->
-    <div id="header" class="jumbotron text-center m-0">
+    <div id="header" class="jumbotron text-center m-0 px-0">
       <h1 class="display-1 p-5 m-5 d-sm-none d-lg-block"></h1>
       <h1 class="display-1 p-5 m-5 d-sm-none d-xl-block">Bentley Consulting Group</h1>
       <h1 class="display-3 p-5 m-5 d-sm-none d-lg-block d-xl-none">Bentley Consulting Group</h1>
@@ -58,14 +58,19 @@
 <!-- Content -->
     <div class="container-fluid px-0">
         <div class="row align-items-center justify-content-center p-5">
-            <div class="col-10">
+            <div class="col-lg-4 p-3" id="bcg">
+                <h1 class="display-1 p-2"></h1>
+                <h1 class="display-1 p-5 d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+            <div class="col-lg-6">
                 <h2>About</h2>
                 <p>Inspired by the true life story of NFL Superbowl Champion, Spencer Paysinger, All American is an inspiring, ensemble family drama about a young, high school football phenom, Spencer James and the two families whose homes he shares after transferring from Crenshaw to Beverly High - his mother and brother in South ...</p>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid px-0 odd">
+    <div class="container-fluid px-0 m-0 odd">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7" id="projects">
             <h1 class="display-1 p-5"></h1>
@@ -144,6 +149,50 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid px-0 odd">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-5">
+                <h1 class="display-1 p-3"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+            <div class="col-md-7">
+                <div class="row align-items-center justify-content-center p-5">
+                    <div class="col-10">
+                        <h2>Our Partners</h2>
+                        <p>Organizations that support the Bentley Consulting Group</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid px-0">
+        <div class="row align-items-center justify-content-around">
+            <div class="col-2" id="rsm">
+                <h1 class="display-1 p-2"></h1>
+                <h1 class="display-1 p-5 d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+            <div class="col-2" id="ey">
+                <h1 class="display-1 p-2"></h1>
+                <h1 class="display-1 p-5 d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+            <div class="col-2" id="kpmg">
+                <h1 class="display-1 p-2"></h1>
+                <h1 class="display-1 p-5 d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+            <div class="col-2" id="pwc">
+                <h1 class="display-1 p-2"></h1>
+                <h1 class="display-1 p-5 d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
+        </div>
+    </div>
+
 
 
 
