--- a/html/home.html
+++ b/html/home.html
@@ -56,7 +56,7 @@
 
 
 <!-- Content -->
-    <div class="container-fluid px-0">
+    <div class="container-fluid m-0 px-0">
         <div class="row align-items-center justify-content-center p-5">
             <div class="col-lg-4 p-3" id="bcg">
                 <h1 class="display-1 p-2"></h1>
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid m-0 px-0">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-7 order-sm-2 order-md-1">
                 <div class="row align-items-center justify-content-center p-5">
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0 odd">
+    <div class="container-fluid px-0 m-0 odd">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-5" id="cases">
                 <h1 class="display-1 p-5"></h1>
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid px-0 mx-0">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-5 order-sm-2 order-md-1">
                 <div class="row align-items-center justify-content-center p-5">
@@ -150,15 +150,12 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0 odd">
+    <div class="container-fluid px-0 mx-0 odd py-5">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-5">
-                <h1 class="display-1 p-3"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
             </div>
             <div class="col-md-7">
-                <div class="row align-items-center justify-content-center p-5">
+                <div class="row align-items-center justify-content-center">
                     <div class="col-10">
                         <h2>Our Partners</h2>
                         <p>Organizations that support the Bentley Consulting Group</p>
@@ -168,7 +165,7 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid p-5 m-0">
         <div class="row align-items-center justify-content-around">
             <div class="col-2" id="rsm">
                 <h1 class="display-1 p-2"></h1>
@@ -192,6 +189,98 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid px-0 mx-0 py-5 odd">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-7">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-10">
+                        <h2>Contact Us</h2>
+                        <p>Reach out to the Bentley Consulting Group</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid mx-0">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-7">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="card">
+                            <img class="card-img-top" src="../images/tom.JPG" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Tom Hudson</h4>
+                                <h5 class="card-title">President</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="card">
+                            <img class="card-img-top" src="../images/celia.JPG" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Celia Schurman</h4>
+                                <h5 class="card-title">Vice President</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="card">
+                            <img class="card-img-top" src="../images/miles.JPG" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Miles Shaheen</h4>
+                                <h5 class="card-title">Financial Manager</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="card">
+                            <img class="card-img-top" src="../images/mike.JPG" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Micheal Watkins</h4>
+                                <h5 class="card-title">Case Manager</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 odd p-5">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">First Name</label>
+                        <input type="email" class="form-control" id="firstNameInput" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Last Name</label>
+                        <input type="email" class="form-control" id="lastNameInput" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Note</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Add Me to the BCG Email List</label>
+                    </div>
+                    <button type="submit" class="my-4 btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
