Fixed image overlap issue

--- a/html/home.html
+++ b/html/home.html
@@ -32,11 +32,17 @@
             <a href="" id="about" class="nav-link p-2 m-2">About</a>
           </li>
           <li class="nav-item">
-            <a href="" id="leadership" class="nav-link p-2 m-2">Leadership</a>
-          </li>
-          <li class="nav-item">
             <a href="" id="services" class="nav-link p-2 m-2">Services</a>
           </li>
+          <li class="nav-item">
+            <a href="" id="event" class="nav-link p-2 m-2">Events</a>
+          </li>
+        <li class="nav-item">
+            <a href="" id="team" class="nav-link p-2 m-2">Team</a>
+        </li>
+        <li class="nav-item">
+            <a href="" id="join" class="nav-link p-2 m-2">Join Us</a>
+        </li>
           <li class="nav-item">
             <a href="" id="contact" class="nav-link p-2 m-2 mr-6">Contact</a>
           </li>
@@ -56,7 +62,7 @@
 
 
 <!-- Content -->
-    <div class="container-fluid m-0 px-0">
+    <div class="container-fluid px-2">
         <div class="row align-items-center justify-content-center p-5">
             <div class="col-lg-4 p-3" id="bcg">
                 <h1 class="display-1 p-2"></h1>
@@ -70,16 +76,18 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0 m-0 odd">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-7" id="projects">
-            <h1 class="display-1 p-5"></h1>
-            <h1 class="display-1 p-5"></h1>
-            <h1 class="display-1 p-5"></h1>
-            <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-            <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+    <div class="container-fluid m-0 p-0 odd">
+      <div class="row align-items-center justify-content-center m-0 p-0">
+        <div class="col-md-7 m-0 p-0" id="projects">
+            <div >
+                <h1 class="display-1 p-5"></h1>
+                <h1 class="display-1 p-5"></h1>
+                <h1 class="display-1 p-5"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 m-0 p-0">
           <div class="row align-items-center justify-content-center p-5">
             <div class="col-10">
                 <h2>Projects</h2>
@@ -90,9 +98,9 @@
       </div>
     </div>
 
-    <div class="container-fluid m-0 px-0">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-7 order-sm-2 order-md-1">
+    <div class="container-fluid m-0 p-0">
+        <div class="row align-items-center justify-content-center m-0 p-0">
+            <div class="col-md-7 order-sm-2 order-md-1 m-0 p-0">
                 <div class="row align-items-center justify-content-center p-5">
                     <div class="col-10">
                         <h2>Education</h2>
@@ -101,23 +109,27 @@
                 </div>
             </div>
             <div class="col-md-5 order-sm-1 order-md-2" id="education">
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                <div>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid px-0 m-0 odd">
-        <div class="row align-items-center justify-content-center">
+    <div class="container-fluid m-0 p-0 odd">
+        <div class="row align-items-center justify-content-center m-0 p-0">
             <div class="col-md-5" id="cases">
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                <div>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                </div>
             </div>
             <div class="col-md-7">
                 <div class="row align-items-center justify-content-center p-5">
@@ -130,8 +142,8 @@
         </div>
     </div>
 
-    <div class="container-fluid px-0 mx-0">
-        <div class="row align-items-center justify-content-center">
+    <div class="container-fluid m-0 p-0">
+        <div class="row align-items-center justify-content-around m-0 p-0">
             <div class="col-md-5 order-sm-2 order-md-1">
                 <div class="row align-items-center justify-content-center p-5">
                     <div class="col-10">
@@ -141,11 +153,13 @@
                 </div>
             </div>
             <div class="col-md-7 order-sm-1 order-md-2" id="events">
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                <div>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                </div>
             </div>
         </div>
     </div>
@@ -280,9 +294,10 @@
         </div>
     </div>
 
-
-
-
+<!-- Footer -->
+    <div class="container-fluid odd">
+        <p class="text-center">2020 Thomas Hudson All Rights Reserved.</p>
+    </div>
 
 
     <!-- Optional JavaScript -->
@@ -299,10 +314,14 @@
                 $logo.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
                 var $about = $("#about");
                 $about.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
-                var $leadership = $("#leadership");
-                $leadership.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+                var $event = $("#event");
+                $event.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
                 var $services = $("#services");
                 $services.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+                var $team = $("#team");
+                $team.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+                var $join = $("#join");
+                $join.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
                 var $contact = $("#contact");
                 $contact.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
                 var $toggler = $("#navbarToggler");
