--- a/html/home.html
+++ b/html/home.html
@@ -52,12 +52,12 @@
 
 <!--  Header  -->
     <div id="header" class="jumbotron text-center m-0 px-0">
-      <h1 class="display-1 p-5 m-5 d-sm-none d-lg-block"></h1>
+        <h1 class="display-1 p-5 m-5"></h1>
+        <h1 class="display-1 p-5 m-5 d-sm-none d-lg-block"></h1>
       <h1 class="display-1 p-5 m-5 d-sm-none d-xl-block">Bentley Consulting Group</h1>
       <h1 class="display-3 p-5 m-5 d-sm-none d-lg-block d-xl-none">Bentley Consulting Group</h1>
       <h1 class="display-1 p-5 m-5 d-md-none d-lg-block"></h1>
-      <h1 class="display-4 p-5 m-5 d-sm-none d-md-block d-lg-none">Bentley Consulting Group</h1>
-        <h1 class="display-5 p-2 m-2 d-block d-md-none"></h1>
+      <h1 class="display-4 p-5 m-5 d-sm-block d-lg-none">Bentley Consulting Group</h1>
     </div>
 
 
