Fixed page padding issue with row m-0

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html  class="container-fluid m-0 p-0" lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
     <title>BCG Home</title>
   </head>
   
-  <body class="col-12 m-0 p-0">
+  <body class="container-fluid m-0 p-0">
     <nav id="mainNavbar" class="navbar navbar-dark bg-none navbar-expand-md fixed-top">
       <a href="#" id="logo" class="navbar-brand p-2 m-2">Bentley Consulting Group</a>
       <button id="navbarToggler" class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
@@ -62,8 +62,9 @@
 
 
 <!-- Content -->
+<div class="container--fluid m-0 p-0">
     <div class="container-fluid px-2">
-        <div class="row align-items-center justify-content-center p-5">
+        <div class="row m-0 align-items-center justify-content-center p-5">
             <div class="col-lg-4 p-3" id="bcg">
                 <h1 class="display-1 p-2"></h1>
                 <h1 class="display-1 p-5 d-md-block"></h1>
@@ -77,7 +78,7 @@
     </div>
 
     <div class="container-fluid m-0 p-0 odd">
-      <div class="row align-items-center justify-content-center m-0 p-0">
+      <div class="row m-0 align-items-center justify-content-center m-0 p-0">
         <div class="col-md-7 m-0 p-0" id="projects">
             <div >
                 <h1 class="display-1 p-5"></h1>
@@ -88,7 +89,7 @@
             </div>
         </div>
         <div class="col-md-5 m-0 p-0">
-          <div class="row align-items-center justify-content-center p-5">
+          <div class="row m-0 align-items-center justify-content-center p-5">
             <div class="col-10">
                 <h2>Projects</h2>
                 <p>A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle. In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all.</p>
@@ -99,9 +100,9 @@
     </div>
 
     <div class="container-fluid m-0 p-0">
-        <div class="row align-items-center justify-content-center m-0 p-0">
+        <div class="row m-0 align-items-center justify-content-center m-0 p-0">
             <div class="col-md-7 order-sm-2 order-md-1 m-0 p-0">
-                <div class="row align-items-center justify-content-center p-5">
+                <div class="row m-0 align-items-center justify-content-center p-5">
                     <div class="col-10">
                         <h2>Education</h2>
                         <p>A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle. In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all.</p>
@@ -121,7 +122,7 @@
     </div>
 
     <div class="container-fluid m-0 p-0 odd">
-        <div class="row align-items-center justify-content-center m-0 p-0">
+        <div class="row m-0 align-items-center justify-content-center m-0 p-0">
             <div class="col-md-5" id="cases">
                 <div>
                     <h1 class="display-1 p-5"></h1>
@@ -132,7 +133,7 @@
                 </div>
             </div>
             <div class="col-md-7">
-                <div class="row align-items-center justify-content-center p-5">
+                <div class="row m-0 align-items-center justify-content-center p-5">
                     <div class="col-10">
                         <h2>Cases</h2>
                         <p>A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle. In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all.</p>
@@ -143,9 +144,9 @@
     </div>
 
     <div class="container-fluid m-0 p-0">
-        <div class="row align-items-center justify-content-around m-0 p-0">
+        <div class="row m-0 align-items-center justify-content-around m-0 p-0">
             <div class="col-md-5 order-sm-2 order-md-1">
-                <div class="row align-items-center justify-content-center p-5">
+                <div class="row m-0 align-items-center justify-content-center p-5">
                     <div class="col-10">
                         <h2>Events</h2>
                         <p>A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle. In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all.</p>
@@ -165,11 +166,11 @@
     </div>
 
     <div class="container-fluid px-0 mx-0 odd py-5">
-        <div class="row align-items-center justify-content-center">
+        <div class="row m-0 align-items-center justify-content-center">
             <div class="col-md-5">
             </div>
             <div class="col-md-7">
-                <div class="row align-items-center justify-content-center">
+                <div class="row m-0 align-items-center justify-content-center">
                     <div class="col-10">
                         <h2>Our Partners</h2>
                         <p>Organizations that support the Bentley Consulting Group</p>
@@ -180,7 +181,7 @@
     </div>
 
     <div class="container-fluid p-5 m-0">
-        <div class="row align-items-center justify-content-around">
+        <div class="row m-0 align-items-center justify-content-around">
             <div class="col-2" id="rsm">
                 <h1 class="display-1 p-2"></h1>
                 <h1 class="display-1 p-5 d-md-block"></h1>
@@ -205,9 +206,9 @@
     </div>
 
     <div class="container-fluid px-0 mx-0 py-5 odd">
-        <div class="row align-items-center justify-content-center">
+        <div class="row m-0 align-items-center justify-content-center">
             <div class="col-md-7">
-                <div class="row align-items-center justify-content-center">
+                <div class="row m-0 align-items-center justify-content-center">
                     <div class="col-10">
                         <h2>Contact Us</h2>
                         <p>Reach out to the Bentley Consulting Group</p>
@@ -220,9 +221,9 @@
     </div>
 
     <div class="container-fluid m-0 p-0">
-        <div class="row align-items-center justify-content-center">
+        <div class="row m-0 align-items-center justify-content-center m-0">
             <div class="col-md-7">
-                <div class="row align-items-center justify-content-center">
+                <div class="row m-0 align-items-center justify-content-center m-0">
                     <div class="col-sm-6 col-lg-3">
                         <div class="card">
                             <img class="card-img-top" src="../images/tom.JPG" alt="Card image cap">
@@ -265,8 +266,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 odd p-5 m-0">
-                <form>
+            <div class="col-md-5 odd p-0">
+                <form class="container p-5">
                     <div class="form-group">
                         <label for="JoinFirstNameInput">First Name</label>
                         <input type="text" class="form-control" id="JoinFirstNameInput" placeholder="First Name">
@@ -303,7 +304,7 @@
         <h3 class="p-5 m-0"></h3>
         <p class="text-center">2020 Thomas Hudson All Rights Reserved.</p>
     </div>
-
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
