--- a/html/home.html
+++ b/html/home.html
@@ -51,7 +51,7 @@
     </nav>
 
 <!--  Header  -->
-    <div id="header" class="jumbotron text-center m-0 px-0">
+    <div id="header" class="jumbotron jumbotron-fluid text-center m-0 px-0">
         <h1 class="display-1 p-5 m-5"></h1>
         <h1 class="display-1 p-5 m-5 d-sm-none d-lg-block"></h1>
       <h1 class="display-1 p-5 m-5 d-sm-none d-xl-block">Bentley Consulting Group</h1>
