--- a/html/home.html
+++ b/html/home.html
@@ -78,18 +78,20 @@
     </div>
 
     <div class="container-fluid m-0 p-0 odd">
-      <div class="row m-0 align-items-center justify-content-center m-0 p-0">
-        <div class="col-md-7 m-0 p-0" id="projects">
-            <div >
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-            </div>
-        </div>
-        <div class="col-md-5 m-0 p-0">
-          <div class="row m-0 align-items-center justify-content-center p-5">
+      <div class="row align-items-center justify-content-center no-gutters">
+          <div class="col-md-7 shell">
+              <div class="col-12" id="projects">
+                  <div>
+                      <h1 class="display-1 p-5"></h1>
+                      <h1 class="display-1 p-5"></h1>
+                      <h1 class="display-1 p-5"></h1>
+                      <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                      <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                  </div>
+              </div>
+          </div>
+        <div class="col-md-5">
+          <div class="row align-items-center justify-content-center p-5">
             <div class="col-10">
                 <h2>Projects</h2>
                 <p>A well-set paragraph of text is not supposed to wow the reader; the wowing should be left to the idea or observation for which the paragraph is a vehicle. In fact, the perfect paragraph is unassuming to the point of near invisibility. That is not to say that the appearance of your text should have no appeal at all.</p>
@@ -100,8 +102,8 @@
     </div>
 
     <div class="container-fluid m-0 p-0">
-        <div class="row m-0 align-items-center justify-content-center m-0 p-0">
-            <div class="col-md-7 order-sm-2 order-md-1 m-0 p-0">
+        <div class="row align-items-center justify-content-center no-gutters">
+            <div class="col-md-7 order-sm-2 order-md-1">
                 <div class="row m-0 align-items-center justify-content-center p-5">
                     <div class="col-10">
                         <h2>Education</h2>
@@ -109,27 +111,31 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 order-sm-1 order-md-2" id="education">
-                <div>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            <div class="col-md-5 order-sm-1 order-md-2 shell">
+                <div class="col-12" id="education">
+                    <div>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container-fluid m-0 p-0 odd">
-        <div class="row m-0 align-items-center justify-content-center m-0 p-0">
-            <div class="col-md-5" id="cases">
-                <div>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+        <div class="row align-items-center justify-content-center no-gutters">
+            <div class="col-md-5 shell">
+                <div class="col-12" id="cases">
+                    <div>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    </div>
                 </div>
             </div>
             <div class="col-md-7">
@@ -144,7 +150,7 @@
     </div>
 
     <div class="container-fluid m-0 p-0">
-        <div class="row m-0 align-items-center justify-content-around m-0 p-0">
+        <div class="row align-items-center justify-content-around no-gutters">
             <div class="col-md-5 order-sm-2 order-md-1">
                 <div class="row m-0 align-items-center justify-content-center p-5">
                     <div class="col-10">
@@ -153,13 +159,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-7 order-sm-1 order-md-2" id="events">
-                <div>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
-                    <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+            <div class="col-md-7 order-sm-1 order-md-2 shell">
+                <div class="col-12" id="events">
+                    <div>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                        <h1 class="display-1 p-5 d-sm-none d-md-block"></h1>
+                    </div>
                 </div>
             </div>
         </div>
